--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^6.6.1",
     "redis": "^3.0.2",
     "supertest": "^6.2.4",
-    "util": "^0.12.4"
+    "util": "^0.12.4",
+    "winston": "^3.8.2"
   }
 }
